syntax = "proto3";

package com.spike.giantdataanalysis;

option
java_package = "com.spike.giantdataanalysis.communication.example.protobuf";
option java_outer_classname = "SequenceProtos";
message SequenceNameValuePair {
	string name = 1;
	int64 value = 2;
}

message SequenceGroupNameValuesPair {
	string name = 1;
	repeated int64 values = 2;
}

message SequenceServiceResult {
	int32 status = 1;
	string message = 2;
}

message SequenceInitializeRequest {
	string name = 1;
	int64 value = 2;
}

message SequenceInitializeResponse {
	SequenceServiceResult result = 1;
}

message SequenceCurrentRequest {
	string name = 1;
}

message SequenceCurrentResponse {
	SequenceServiceResult result = 1;
	SequenceNameValuePair value = 2;
}

message SequenceNextRequest {
	string name = 1;
	int32 count = 2;
}

message SequenceNextOneResponse {
	SequenceServiceResult result = 1;
	SequenceNameValuePair value = 2;
}

message SequenceNextNResponse {
	SequenceServiceResult result = 1;
	SequenceGroupNameValuesPair value = 2;
}

service SequenceService {
	rpc Initialize (SequenceInitializeRequest) returns
	(SequenceInitializeResponse);
	rpc Current (SequenceCurrentRequest) returns (SequenceCurrentResponse);
	rpc NextOne (SequenceNextRequest) returns (SequenceNextOneResponse);
	rpc NextN (SequenceNextRequest) returns (SequenceNextNResponse);
}